# nes-emu

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: 6502_mem.h  addrmode.h  cpu.h  cpu_decoder.h  decode_lut.h  opcode_handle.h
src/: 6502_mem.c  addrmode.c  cpu.c  cpu_decoder.c  decode_lut.c  main.c  opcode_handle.c
tests/: CMakeLists.txt
tests/src/: main.c
